Bug #11166 Inconsistency when applying backup log when inserts
Submitted: 8 Jun 2005 13:44 Modified: 13 Jun 2005 18:00
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1, 5.0, 5.1 OS:
Assigned to: Jonas Oreland Target Version:

[8 Jun 2005 13:44] Jonas Oreland
Description:
Insert log records are incorrectly applied by ndb_restore
  making a restore incosistent if it contains inserts

How to repeat:
 

Suggested fix:
[8 Jun 2005 15:50] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/25757
[9 Jun 2005 7:36] Jonas Oreland
pushed in 4.1.13 and 5.0.8
[13 Jun 2005 18:00] Jon Stephens
Documented in Change History for 4.1.13, 5.0.8. Closed.