bug#11166 - ndb   Fix potential inconsistency when running ndb_restore due to faulty parsing     of backup log wrt inserts